# china-all-weather

./: .gitignore  README.md  pyproject.toml  run_monitor.py
agents/main/projects/hkex-short-oi/: .gitignore  README.md  STATUS.md  pyproject.toml
agents/main/projects/hkex-short-oi/src/hkex_short_oi/: __init__.py  __main__.py  backtest.py  features.py  fetchers.py  models.py  parsers.py  price.py  reports.py  sfc.py  storage.py  strategies.py
agents/main/projects/hkex-short-oi/tests/: test_parsers.py  test_storage_features_strategies.py
configs/: all_weather.yaml
docs/: research_report.md
src/all_weather/: __init__.py  attribution.py  backtest.py  cli.py  data_fetcher.py  data_store.py  metrics.py  monitor.py  report.py  report_attribution.py  returns.py  risk_parity.py  settings.py  universe.py
tests/: test_backtest.py  test_returns.py  test_risk_parity.py
